# libehnet64

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac
misc/: pre-tidy.patch
src/: ehnet64.h
tests/: test-hton64.c  test-ntoh64.c
